--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <li><a href="#">CONTACT US</a></li>
             </ul>
         </nav>
+        <div class="content">
+            <h1>California</h1>
+            <a href="#">Explore</a>
+        </div>
     </div>
 </body>
 </html>
