--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="hero">
+        <video autoplay loop muted plays-inline class="back-video">
+            <source src="images/video.mp4" type="video/mp4" >
+        </video>
         <nav>
             <img src="images/logo.png" class="logo">
             <ul>
